# master-thesis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_and_run.sh  build_and_time_both.sh  build_run_plot.sh  compare_densities.sh  count.py  plot.py  plot_densities.sh  run_both.sh  time_both.sh  time_repeated.sh  time_shared.sh
scripts/: compare_densities.py  plot_absolute_error_parallel_128.py  plot_absolute_error_serial.py  plot_associations.py  plot_densities.py  plot_density_error_block_size_128.py  plot_durations_both.py  plot_durations_repeated.py  plot_durations_shared.py  plot_positions.py  show_sorted_indices.py
src/: charge_density_global_2d.cu  charge_density_global_2d.cuh  charge_density_shared_2d.cu  charge_density_shared_2d.cuh  common.cuh  grid.cu  grid.cuh  int_array.cu  int_array.cuh  main.cu  particle_generation.cu  particle_generation.cuh  particles.cu  particles.cuh  program_options.cu  program_options.cuh  timer.cu  timer.cuh
validation_1/: compare.py  plot.py  positions_11x7x1.csv  run.sh
validation_1/key/: charge_densities_global.csv
validation_1/output/: positions.csv
validation_2/: compare.py  report.py  report.sh  run.sh
